--- a/.github/workflows/validate-new-issue-test.yml
+++ b/.github/workflows/validate-new-issue-test.yml
@@ -56,7 +56,7 @@ jobs:
         issue_number="${{ steps.setup.outputs.issue_number }}"
         .github/workflows/test-helpers/get-issue-validation-log "${issue_number}"
         grep "sentry-test-fixture-nonmember is not a member of the getsentry org." log
-        grep "BUG_REPORT.md? 👍 💃" log
+        grep "BUG_REPORT.md? Match! 👍 💃" log
   case_3:
     name: "It is flexible about header order and extra headers."
     runs-on: ubuntu-latest
@@ -85,4 +85,28 @@ jobs:
       run: |
         issue_number="${{ steps.setup.outputs.issue_number }}"
         .github/workflows/test-helpers/get-issue-validation-log "${issue_number}"
-        grep "BUG_REPORT.md? 👍 💃" log
+        grep "BUG_REPORT.md? Match! 👍 💃" log
+  case_4:
+    name: "It closes invalid issues with a comment."
+    runs-on: ubuntu-latest
+    steps:
+    - uses: actions/checkout@v2
+    - id: setup
+      name: setup
+      env:
+        GITHUB_TOKEN: ${{ secrets.PAT_NONMEMBER }}
+      run: |
+        issue_number=$(
+          basename $(
+            gh issue create --title "Greetings, program!" \
+              --body "# Foo\nI don't follow directions."
+          )
+        )
+        echo "::set-output name=issue_number::${issue_number}"
+    - name: test
+      run: |
+        issue_number="${{ steps.setup.outputs.issue_number }}"
+        .github/workflows/test-helpers/get-issue-validation-log "${issue_number}"
+        grep 'BUG_REPORT.md? No match. 👎'
+        grep 'FEATURE_REQUEST.md? No headers in template. 🤷'
+        grep 'Commented: "https://github.com/${{ github.repository }}' log
