--- a/.github/workflows/validate-new-issue-test.yml
+++ b/.github/workflows/validate-new-issue-test.yml
@@ -111,7 +111,6 @@ jobs:
         issue_number="${{ steps.setup.outputs.issue_number }}"
         .github/workflows/test-helpers/get-issue-validation-log "${issue_number}"
         set -x
-
-        grep 'BUG_REPORT.md? No match. 👎'
-        grep 'FEATURE_REQUEST.md? No headers in template. 🤷'
+        grep 'BUG_REPORT.md? No match. 👎' log
+        grep 'FEATURE_REQUEST.md? No headers in template. 🤷' log
         grep 'Commented: "https://github.com/${{ github.repository }}' log
