--- a/.github/workflows/validate-new-issue.yml
+++ b/.github/workflows/validate-new-issue.yml
@@ -1,7 +1,7 @@
 name: Validate new issue
 on:
   issues:
-    types: ["opened", "cheese"]
+    types: ["opened"]
 jobs:
   validate-new-issue:
     runs-on: ubuntu-latest
