--- a/.github/workflows/validate-new-issue.yml
+++ b/.github/workflows/validate-new-issue.yml
@@ -1,7 +1,7 @@
 name: Validate new issue
 on:
   issues:
-    types: ["opened", "cheese"]
+    types: ["opened"]
 jobs:
   validate-new-issue:
     runs-on: ubuntu-latest
@@ -36,7 +36,6 @@ jobs:
           #   - case-sensitive tho
           # - not an *exact* match for a template (ignoring whitespace)
           function extract-headings { { sed 's/\r$//' "$1" | grep '^#' || echo -n ''; } | sort; }
-          echo "blah"
           jq -r .issue.body "$GITHUB_EVENT_PATH" > issue
           if ! grep -q '[^[:space:]]' issue; then
             REASON="${REASON_EMPTY}"
